MVP + animation, fixed nav and subscription form stretch

--- a/css/index.css
+++ b/css/index.css
@@ -228,6 +228,7 @@ footer {
   color: #22283B;
   background: #f4f4f4;
   padding: 20px 0;
+  margin-top: 20px;
   border: 1px double #e0e0e0;
   border-radius: 10px;
   display: flex;
@@ -360,4 +361,51 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+.home .simple-subscription-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  width: 100%;
+  color: #5e6164;
+  border-radius: 8;
+  padding: 5px 20px;
+}
+.home .simple-subscription-form form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 75px;
+  padding: 5px 20px;
+  border-radius: 8px;
+}
+@media (max-width: 500px) {
+  .home .simple-subscription-form form {
+    margin: 10px 0;
+  }
+}
+.home .simple-subscription-form form h4 {
+  font-size: 2.5rem;
+  padding-bottom: 10px;
+}
+.home .simple-subscription-form form p {
+  margin: 10px 0;
+}
+.home .simple-subscription-form form input {
+  margin: 10px 0;
+}
+.home .simple-subscription-form .button {
+  background-color: #23293b;
+  color: #f6f7f8;
+  border-radius: 8px;
+  width: 95px;
+  padding: 2% 3%;
+  height: 30px;
+}
+.home .simple-subscription-form .button:hover {
+  background-color: #f6f7f8;
+  color: #23293b;
 }
