--- a/less/home-page.less
+++ b/less/home-page.less
@@ -90,10 +90,10 @@
         width: 33%;
         height: 48px;
         border-radius: 8px;
-          @media @phone {
-            width: 100%;
-            height: 60px;
-          }
+        @media @phone {
+          width: 100%;
+          height: 60px;
+        }
 
         button {
           .custom-button(95px; 2% 3%; 30px;);
@@ -123,4 +123,48 @@
       }
     }
   }
+
+  .simple-subscription-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    color: @main-font-color;
+    border-radius: 8;
+    padding: 5px 20px;
+    form {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 75px;
+      padding: 5px 20px;
+      border-radius: 8px;
+
+      @media @phone {
+        margin: 10px 0;
+      }
+
+        h4{
+          font-size: 2.5rem;
+          padding-bottom: 10px;
+        }
+
+        p {
+          margin: 10px 0;
+        }
+
+        input {
+          margin: 10px 0;
+        }
+
+    }
+
+    .button {
+      .custom-button(95px; 2% 3%; 30px;)
+    }
+  }
+
 } // home
