--- a/less/variables.less
+++ b/less/variables.less
@@ -8,6 +8,10 @@
   100%  {background-color: @ebony-clay;}
 }
 
+@subscription-form-bg: darken(@porcelain, 20%);
+@subscription-form-color: @porcelain;
+@subscription-form-padding: rem-calc(32);
+
 // Color pointers
 @nav-bg: @wild-sand;
 @nav-font: @river-bend;
